--- a/meeting/templates/base.html
+++ b/meeting/templates/base.html
@@ -21,9 +21,14 @@
   <body>
     <div class="main-container">
         <div class="header">
-
           {% if user.is_authenticated %}
-          <div>{{ user.last_name }}{{ user.first_name }}님, 안녕하세요!</div>
+          <a id="home-btn" href="{% url 'main' %}" role="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+              <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+            </svg>
+          </a>
+          <div><b>{{ user.last_name }}{{ user.first_name }}</b>님, 안녕하세요!</div>
           {% else %}
           <a href="{% url 'login' %}">로그인</a>
           {% endif %}
