--- a/meeting/static/meeting/css/meeting.css
+++ b/meeting/static/meeting/css/meeting.css
@@ -48,7 +48,7 @@
   }
   
   #summary-area {
-    background-color: rgba(231, 241, 255, 0.3);
+    background-color: #f5f7f9;
     border-radius: 20px;
     padding: 20px;
   }
